--- a/html/result.html
+++ b/html/result.html
@@ -1,10 +1,38 @@
 {% extends "layout.html" %}
 {% block body %}
 
-    <h1>Podcast Transcriber</h1>
+<div class="album py-5">
+    <div class="container">
+    <div class="row mb-2">
+    <div class="col-md-12">
+      <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+          <h3 class="mb-2">Transcription Results</h3>
+          <div class="mb-3 text-muted">Audio length: {{ length }}</div>
 
-    <div>Transcription:</div>
-    {{ message }}
+            {% for item in message %}
 
+            <div class="row mb-3">
+                <div class="col-2 mb-1 text-muted">{{ item[0] }}</div>
+                <div class="col-10">
+                    <blockquote class="card-text mb-auto">{{ item[1] }}</blockquote>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="container text-center">
+
+        <a href="/" class="btn btn-secondary my-2">Return Home</a>
+
+    </div>
+
+</div>
 
 {% endblock %}
